Edit Path and Add game menu

--- a/style.css
+++ b/style.css
@@ -1,14 +1,22 @@
-body {
+html, body {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #f0f0f0;
+    /*background-color: #f0f0f0;*/
+    background: linear-gradient(to right top, #c2c6ce, #a2d4e7, #79e4dd, #91edaa, #dde86b);
 }
 
 canvas {
-    display: block;
+    /*display: block;*/
+    /*display: none;*/
     margin: 0 auto;
-    background: linear-gradient(to right top, #c2c6ce, #a2d4e7, #79e4dd, #91edaa, #dde86b);
+    /*background: linear-gradient(to right top, #c2c6ce, #a2d4e7, #79e4dd, #91edaa, #dde86b);*/
+}
+
+#theGame {
+    display: none;
 }
 
 #nextWaveButton {
